# senhance

./: .gitignore  LICENSE.txt  README.md  makefile  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: augmentations.ipynb  codec.ipynb  mimi.ipynb  noise_schedule.ipynb  sample.ipynb
scripts/: train.py
scripts/data/: create_arrow_from_index.py  create_data_index.py  split_data_index.py  utils.py
scripts/data/sh/: create_dataset.sh  download_DNS4.sh
src/denoiser/: __about__.py  cfm.py  unet.py
src/denoiser/data/: audio.py  augmentations.py  collate.py  dataset.py  source.py  stft.py  utils.py
src/denoiser/data/augmentations/: augmentations.py  background_noise.py  chain.py  choose.py  clipping.py  default.py  dither.py  filters.py  flanger.py  gaussian_noise.py  overdrive.py  phaser.py  reverb.py  silence.py  speed.py
src/denoiser/models/: checkpoint.py
src/denoiser/models/cfm/: cfm.py  utils.py
src/denoiser/models/codec/: codec.py  dac.py  mimi.py
src/denoiser/models/unet/: attention.py  magnitude_preserving.py  unet.py
src/denoiser/neural_codec/: codec.py  mimi.py
src/senhance/data/: audio.py  collate.py  dataset.py  source.py  stft.py  utils.py
src/senhance/data/augmentations/: augmentations.py  background_noise.py  chain.py  choose.py  clipping.py  default.py  dither.py  filters.py  flanger.py  gaussian_noise.py  overdrive.py  phaser.py  random_noise.py  reverb.py  silence.py  speed.py
src/senhance/models/: checkpoint.py
src/senhance/models/cfm/: cfm.py  utils.py
src/senhance/models/codec/: codec.py  dac.py  mimi.py
src/senhance/models/unet/: attention.py  magnitude_preserving.py  simple_unet.py  unet.py
tests/: __init__.py  test_audiosource.py  test_checkpoint.py  test_dataset.py  test_utils.py
tests/augments/: __init__.py  test_augments.py  test_background_noise.py  test_chain.py  test_choose.py  test_clipping.py  test_default.py  test_filters.py  test_random_noise.py  test_reverb.py  utils.py
tests/codec/: test_dac.py  test_mimi.py
tests/modules/: test_attention.py  test_cfm.py  test_simple_unet.py  test_unet.py
