[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "denoiser"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "lgestin", email = "lucas.gestin.pro@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.hatch.envs.default]
installer = "pip"
dependencies = [
  "torch",
  "torchaudio",
  "torchvision",
  "tqdm",
  "tensorboard",
  "simple-parsing",
  "moshi",
  "descript-audio-codec",
]

[tool.hatch.envs.dev]
extra-dependencies = [
  "pytest",
  "ruff",
  "black[jupyter]",
  "isort",
  "ipdb",
  "ipykernel",
  "matplotlib",
  "seaborn",
]


[project.urls]
Documentation = "https://github.com/lgestin/denoiser#readme"
Issues = "https://github.com/lgestin/denoiser/issues"
Source = "https://github.com/lgestin/denoiser"

[tool.hatch.version]
path = "src/denoiser/__init__.py"

[tool.coverage.run]
source_pkgs = ["denoiser", "tests"]
branch = true
parallel = true
omit = [
  "src/denoiser/__about__.py",
]

[tool.coverage.paths]
denoiser = ["src/denoiser", "*/denoiser/src/denoiser"]
tests = ["tests", "*/denoiser/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
