[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "senhance"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "lgestin", email = "lucas.gestin.pro@gmail.com" },
]
installer = "uv"
dependencies = [
  "av",
  "pyarrow",
  "torch>=2.5.0",
  "torchaudio>=2.5.0",
  "torchvision",
  "tqdm",
  "simple-parsing",
  "moshi",
  "descript-audio-codec",
  "numba>=0.58.0"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.hatch.build.target.wheel]
packages = ["src/senhance"]


[tool.hatch.envs.default]
extra-dependencies = [
  "tensorboard",
  "pytest",
  "ruff",
  "black[jupyter]",
  "isort",
  "ipdb",
  "ipykernel",
  "matplotlib",
  "seaborn",
]

[project.urls]
Documentation = "https://github.com/lgestin/senhance#readme"
Issues = "https://github.com/lgestin/senhance/issues"
Source = "https://github.com/lgestin/senhance"

[tool.hatch.version]
path = "src/senhance/__init__.py"

[tool.coverage.run]
source_pkgs = ["senhance", "tests"]
branch = true
parallel = true
omit = [
  "src/senhance/__about__.py",
]

[tool.coverage.paths]
senhance = ["src/senhance", "*/senhance/src/senhance"]
tests = ["tests", "*/senhance/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 80
indent-width = 4
